# VerteilteSysteme

./: .~lock.readme_lieferant#  Client_Output.cpp  MultiCastReceiver.cpp  MultiCastReceiver.h  MultiCastSender.cpp  MultiCastSender.h  README.md  Sensor.cpp  Sensor.h  Sensor_Client.cpp  Server.cpp  ShopConnection.cpp  ShopConnection.h  readme_lieferant  shop.cpp  shop.thrift
gen-cpp/: ShopRequest.cpp  ShopRequest.h  ShopRequest_server.skeleton.cpp
libs/: libpaho-mqtt3a.so.1.0  libpaho-mqtt3as.so.1.0  libpaho-mqtt3c.so.1.0  libpaho-mqtt3cs.so.1.0
verteile_system_praktikum_cmake/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
verteile_system_praktikum_cmake/sensor/: CMakeLists.txt  Makefile  Sensor  cmake_install.cmake
verteile_system_praktikum_cmake/sensor/source/: MultiCastReceiver.cpp  MultiCastReceiver.h  Sensor.h  Sensor_Client.cpp
verteile_system_praktikum_cmake/server/: CMakeLists.txt  Makefile  Server  cmake_install.cmake
verteile_system_praktikum_cmake/server/gen-cpp/: shop_constants.cpp  shop_types.cpp
verteile_system_praktikum_cmake/server/source/: MultiCastSender.cpp  MultiCastSender.h  Server.cpp  ShopConnection.cpp  ShopConnection.h
verteile_system_praktikum_cmake/server/www/: 404Error  shop_nachbestellen
verteile_system_praktikum_cmake/shop/: CMakeLists.txt  Makefile  Shop  cmake_install.cmake
verteile_system_praktikum_cmake/shop/gen-cpp/: ShopRequest.h  ShopRequest_server.skeleton.cpp  shop_constants.h  shop_types.h
verteile_system_praktikum_cmake/shop/source/: Lieferanten.cpp  Lieferanten.h  shop.cpp
(+17 files in other folders)
